--- a/index.html
+++ b/index.html
@@ -6,34 +6,194 @@
   <meta name="theme-color" content="#0b1220" />
   <title>RControl Factory</title>
 
+  <!-- tudo vem de /app -->
+  <link rel="manifest" href="/app/manifest.json" />
+  <link rel="icon" href="/app/icon-192.png" />
+  <link rel="stylesheet" href="/app/styles.css" />
+
+  <!-- iOS PWA -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <style>
-    html,body{height:100%;margin:0;background:#0b1220;color:#e5e7eb;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial}
-    .wrap{min-height:100%;display:flex;align-items:center;justify-content:center;padding:24px}
-    .card{max-width:520px;width:100%;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:18px;padding:18px}
-    .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;font-size:13px;opacity:.85}
-    .btn{display:inline-block;margin-top:12px;background:#22c55e1a;border:1px solid #22c55e55;color:#d1fae5;padding:10px 12px;border-radius:12px;text-decoration:none}
+    /* iOS: melhora clique em checkbox/label */
+    label[for]{ cursor:pointer; }
+    input[type="checkbox"]{
+      width:22px;height:22px;
+      accent-color:#22c55e;
+      -webkit-tap-highlight-color: transparent;
+    }
   </style>
 </head>
+
 <body>
-  <div class="wrap">
-    <div class="card">
-      <div style="font-size:18px;font-weight:700">RControl Factory</div>
-      <div class="mono" style="margin-top:6px">Carregando /app/…</div>
-      <a class="btn" href="/app/?v=999">Abrir agora</a>
-      <div class="mono" style="margin-top:10px">Se ficar preso aqui: abra o link acima.</div>
-    </div>
+  <noscript>Ative o JavaScript para usar a Factory.</noscript>
+
+  <div id="app">
+    <!-- TOPBAR -->
+    <header class="topbar">
+      <div class="brand">
+        <div class="dot"></div>
+        <div>
+          <div class="title">RControl Factory</div>
+          <div class="sub">Factory interna • PWA • Offline-first</div>
+        </div>
+      </div>
+
+      <div class="right">
+        <div id="statusText" class="pill">OK ✅</div>
+        <!-- Engrenagem fica opcional: se existir ui.gear.js ela usa; se não existir, ignora -->
+        <button id="btnGear" class="iconbtn" type="button" aria-label="Settings">⚙️</button>
+      </div>
+    </header>
+
+    <!-- TABS -->
+    <nav class="tabs">
+      <button class="tab" data-view="dashboard" type="button">Dashboard</button>
+      <button class="tab" data-view="newapp" type="button">New App</button>
+      <button class="tab" data-view="editor" type="button">Editor</button>
+      <button class="tab" data-view="generator" type="button">Generator</button>
+      <button class="tab" data-view="agent" type="button">Agente</button>
+      <button class="tab" data-view="settings" type="button">Settings</button>
+      <button class="tab" data-view="admin" type="button">Admin</button>
+    </nav>
+
+    <!-- VIEWS -->
+    <main class="views">
+      <section id="view-dashboard" class="view">
+        <div class="card">
+          <h1>Bem-vindo 👋</h1>
+          <p class="hint">Crie apps e publique depois (primeiro vamos estabilizar).</p>
+          <div class="row">
+            <button class="btn" id="btnNewAppQuick" type="button">+ Criar novo app</button>
+            <button class="btn" id="btnOpenEditor" type="button">Abrir Editor</button>
+            <button class="btn" id="btnBackup" type="button">Exportar backup</button>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Apps salvos</h2>
+          <div id="appsList" class="hint">Nenhum app salvo ainda.</div>
+        </div>
+      </section>
+
+      <section id="view-newapp" class="view">
+        <div class="card">
+          <h2>Novo App</h2>
+          <p class="hint">Crie um app (nome + slug). Depois você vai para o Editor.</p>
+          <div class="row">
+            <input id="newAppName" class="input" placeholder="Nome (ex: MeuApp)" />
+            <input id="newAppSlug" class="input" placeholder="Slug (ex: meuapp)" />
+          </div>
+          <div class="row">
+            <button id="btnCreateApp" class="btn primary" type="button">Criar</button>
+            <button id="btnGenSlug" class="btn" type="button">Gerar slug</button>
+          </div>
+          <pre id="newAppOut" class="mono small">Pronto.</pre>
+        </div>
+      </section>
+
+      <section id="view-editor" class="view">
+        <div class="card">
+          <h2>Editor</h2>
+          <p class="hint">Edite arquivos do app ativo e salve.</p>
+
+          <div id="editorTop" class="row">
+            <select id="fileSelect" class="input"></select>
+            <button id="btnSaveFile" class="btn ok" type="button">Salvar</button>
+            <button id="btnReloadFiles" class="btn" type="button">Recarregar</button>
+          </div>
+
+          <textarea id="fileEditor" class="textarea mono" spellcheck="false"
+            placeholder="Selecione um app para ver arquivos."></textarea>
+
+          <pre id="editorOut" class="mono small">Pronto.</pre>
+        </div>
+      </section>
+
+      <section id="view-generator" class="view">
+        <div class="card">
+          <h2>Generator</h2>
+          <p class="hint">Gera ZIP do app selecionado.</p>
+          <div class="row">
+            <button id="btnBuildZip" class="btn primary" type="button">Build ZIP</button>
+          </div>
+          <pre id="genOut" class="mono small">Pronto.</pre>
+        </div>
+      </section>
+
+      <section id="view-agent" class="view">
+        <div class="card">
+          <h2>Agente</h2>
+          <p class="hint">Comandos naturais + patchset.</p>
+          <textarea id="agentInput" class="textarea mono" spellcheck="false" placeholder="Digite um comando…"></textarea>
+          <div class="row">
+            <button id="btnAgentRun" class="btn primary" type="button">Executar</button>
+            <button id="btnAgentHelp" class="btn" type="button">Ajuda</button>
+          </div>
+          <pre id="agentOut" class="mono small">Pronto.</pre>
+        </div>
+      </section>
+
+      <!-- SETTINGS vira a “central receptora” -->
+      <section id="view-settings" class="view">
+        <div class="card">
+          <h2>Settings</h2>
+          <p class="hint">Central de configurações + Injeção (sem engrenagem).</p>
+          <div id="settingsMount"></div>
+          <pre id="settingsOut" class="mono small">Pronto.</pre>
+        </div>
+      </section>
+
+      <section id="view-admin" class="view">
+        <div class="card">
+          <h2>Admin</h2>
+          <p class="hint">Diagnóstico / manutenção / self-update.</p>
+          <div class="row">
+            <button id="btnDiagnose" class="btn" type="button">Diagnosticar</button>
+            <button id="btnResetSafe" class="btn danger" type="button">Zerar (safe)</button>
+          </div>
+          <pre id="adminOut" class="mono small">Pronto.</pre>
+        </div>
+      </section>
+    </main>
   </div>
 
+  <!-- SW: raiz (pra cobrir / e /app). Não coloca /app/ aqui, senão o scope não cobre raiz -->
   <script>
     (function(){
-      // preserva ?v=xxx (quebra cache)
-      var qs = location.search || "?v=999";
-      // manda sempre pro APP real
-      location.replace("/app/" + qs);
+      if (!("serviceWorker" in navigator)) return;
+      window.addEventListener("load", async () => {
+        try {
+          const reg = await navigator.serviceWorker.register("/sw.js", { scope: "/" });
+          reg.update?.();
+        } catch (e) {
+          console.warn("SW register falhou:", e);
+        }
+      });
     })();
   </script>
+
+  <!-- CORE (ordem importa) -->
+  <script defer src="/app/app.js"></script>
+
+  <!-- CORE modules -->
+  <script defer src="/app/js/core/vfs_overrides.js"></script>
+  <script defer src="/app/js/core/thompson.js"></script>
+  <script defer src="/app/js/core/github_sync.js"></script>
+  <script defer src="/app/js/core/mother_selfupdate.js"></script>
+
+  <!-- NEW: Registry + Injector (receptor) -->
+  <script defer src="/app/js/core/registry.js"></script>
+  <script defer src="/app/js/core/injector.js"></script>
+
+  <!-- UI layer -->
+  <script defer src="/app/js/router.js"></script>
+  <script defer src="/app/js/admin.js"></script>
+
+  <!-- (se existirem, ok; se não existirem, só não usa) -->
+  <script defer src="/app/js/core/publish_queue.js"></script>
+  <script defer src="/app/js/agent.router.js"></script>
+  <script defer src="/app/js/agent.nlp.js"></script>
 </body>
 </html>
