--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,48 @@
 <!doctype html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>RCF</title>
-  <meta http-equiv="refresh" content="0; url=/" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="theme-color" content="#0b1220" />
+  <title>RControl Factory</title>
+
+  <!-- IMPORTANTe: caminhos RELATIVOS (sem / no começo) -->
+  <link rel="stylesheet" href="./styles.css" />
+
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
-<body></body>
+
+<body>
+  <!-- DEBUG: se aparecer isso, pelo menos o HTML carregou -->
+  <div id="bootStatus" class="mono small" style="margin:12px">Carregando…</div>
+
+  <div id="app"></div>
+
+  <!-- scripts RELATIVOS -->
+  <script defer src="./js/ui.touchfix.js"></script>
+  <script defer src="./app.js"></script>
+
+  <script defer src="./js/router.js"></script>
+  <script defer src="./js/admin.js"></script>
+
+  <script defer src="./js/core/vfs_overrides.js"></script>
+  <script defer src="./js/core/thompson.js"></script>
+  <script defer src="./js/core/github_sync.js"></script>
+  <script defer src="./js/core/mother_selfupdate.js"></script>
+
+  <!-- SW: como o sw.js tá dentro de /app -->
+  <script>
+    (function(){
+      if (!("serviceWorker" in navigator)) return;
+      window.addEventListener("load", async () => {
+        try {
+          await navigator.serviceWorker.register("./sw.js", { scope: "/" });
+        } catch(e){
+          console.warn("SW erro:", e);
+        }
+      });
+    })();
+  </script>
+</body>
 </html>
